fix columns aligning and background twitch

--- a/front_end/src/app/question/questions.component.css
+++ b/front_end/src/app/question/questions.component.css
@@ -242,12 +242,21 @@
   .table-block .costOfLiving table{
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 450px;
+    width: 480px;
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
     background-color: white;
     border: solid #6678b1 1px;
     border-collapse: separate;
+  }
+
+  .table-block .costOfLiving td{
+    border-bottom: 1px solid #ccc;
+    color: #669;
+    padding: 9px 8px;
+    transition: .3s linear;  
+    word-wrap: break-word;  
+    width: 80px;
   }
 
   .table-block .costOfLiving caption{
@@ -261,6 +270,7 @@
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
     background: white;
+    height: 55px;
   }
 
   .table-block a{   
